--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,57 @@
-<p>dashboard works!</p>
+<div class="container mt-4">
+    <!-- Stats Row -->
+    <div class="card-stats d-flex">
+        <div class="card flex-row count-card shadow-sm p-3 mb-5 rounded">
+            <div class="icon-section mt-3">
+                <i class="bi bi-person-badge-fill stats-icon"></i>
+            </div>
+            <div class="text-section mt-4 ms-3">
+                <h5>Total Employees</h5>
+                <h3>20</h3> <!-- for example -->
+            </div>
+        </div>
+        <div class="card flex-row count-card shadow-sm p-3 mb-5 rounded">
+            <div class="icon-section mt-3">
+                <i class="bi bi-people-fill stats-icon"></i>
+            </div>
+            <div class="text-section mt-4 ms-3">
+                <h5 class="ms-3">Total Users</h5>
+                <h3>10</h3> <!-- for example -->
+            </div>
+        </div>
+        <div class="card flex-row count-card shadow-sm p-3 mb-5 rounded">
+            <div class="icon-section mt-3">
+                <i class="bi bi-person-check-fill stats-icon"></i>
+            </div>
+            <div class="text-section mt-4 ms-3">
+                <h5>Total Leaves</h5>
+                <h3>9</h3> <!-- for example -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Upcoming Holidays and Working Hours -->
+    <div class="row">
+        <!-- Upcoming Holidays -->
+        <div class="col-lg-6 upcoming-card">
+            <div class="card next-holiday-card shadow-sm p-3 rounded border-0 ">
+                <h5 class="text-light fw-bold fs-5 m-1">Upcoming Holidays</h5>
+                <div class="card flex-row bg-transparent border-0">
+                    <div class="mt-4">
+                        <i class="bi bi-calendar3 calender-icon text-light"></i>
+                    </div>
+                    <div class="mt-4 ms-3 text-light">
+                        <p class="text-light">New Year</p>
+                        <p>30 Dec 2025</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-light rounded">View All</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Working Hours Chart -->
+
+    </div>
+</div>
