--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,7 +1,7 @@
 <div class="all text-center">
     <h1 class=" fs-1">Oops!</h1>
     <p class="fs-5">We Couldn't find the page you are looking for</p>
-    <img src="images/notfound.webp" alt="notfound"  height="400" width="400">
+    <img src="images/notfound.webp" alt="notfound"  height="400" width="auto">
     <br>
     <button class="btn" [routerLink]="['/dashboard']">
       Back to Dashboard
